feat: ready to release

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "comuni-province-regioni",
   "version": "0.1.0",
   "description": "a package containing definitions for all the entities recognised as \"Comune\", \"Provincia\" and \"Regione\" in Italy",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/veeso/comuni-province-regioni",
   "author": "Christian Visintin <christian.visintin@veeso.dev>",
   "license": "MIT",
