--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "comuni-province-regioni",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "a package containing definitions for all the entities recognised as \"Comune\", \"Provincia\" and \"Regione\" in Italy",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -12,7 +13,9 @@
   "license": "MIT",
   "private": false,
   "files": [
-    "dist"
+    "lib",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
